# project-hub

./: .env.example  .gitignore  .project.json  LICENSE  README.md  index.html  package-lock.json  package.json  theme-future.html  theme-onyx.html  theme-preview.html  tsconfig.json  vite.config.ts
.claude/: launch.json
icon-lab/: b-source.html  gallery.html
scanner/: AI_API.md  draft.mjs  manage.mjs  mcp-server.mjs  recon.mjs  scan.mjs
src/: App.tsx  ai.ts  data.ts  notify.ts  styles.css  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  projects.rs  server.rs  watcher.rs
src/components/: AiPanel.tsx  DetailDrawer.tsx  Dock.tsx  HelpPanel.tsx  Hero.tsx  ProgressRing.tsx  ProjectCard.tsx  ProjectDetail.tsx  ProjectGraph.tsx  ReconView.tsx  SettingsPanel.tsx  StatusChip.tsx  TopBar.tsx
