[package]
name = "project-hub"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tiny_http = "0.12"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
# 文件系统监听(macOS FSEvents):改 .project.json / 增删项目文件夹 → 毫秒级推送前端,根治"改文件等轮询"
notify = "6"

# macOS 原生:把窗口压到桌面层(壁纸效果)
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
tauri-plugin-macos-fps = "0.1.0"
